--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
     <!-- Open Graph / LinkedIn -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://TU-DOMINIO.com/" />
+    <meta property="og:url" content="https://gabyespluge.vercel.app/" />
     <meta property="og:title" content="Gaby Espluge | Business Intelligence Analyst" />
     <meta
       property="og:description"
       content="Turning raw data into strategic decisions through Business Intelligence and analytics."
     />
-    <meta property="og:image" content="https://TU-DOMINIO.com/og-image.png" />
+    <meta property="og:image" content="https://gabyespluge.vercel.app/og-image.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +30,7 @@
       name="twitter:description"
       content="Turning raw data into strategic decisions through Business Intelligence and analytics."
     />
-    <meta name="twitter:image" content="https://TU-DOMINIO.com/og-image.png" />
+    <meta name="twitter:image" content="https://gabyespluge.vercel.app/og-image.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
