--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
@@ -42,3 +42,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
